--- a/main_app/templates/pedals/detail.html
+++ b/main_app/templates/pedals/detail.html
@@ -8,12 +8,12 @@
     <div class="card">
         <div class="card-content">
         <span class="card-title">{{ pedal.name }}</span>
-        <p>Breed: {{ pedal.breed }}</p>
+        <p>Type: {{ pedal.type }}</p>
         <p>Description: {{ pedal.description }}</p>
-            {% if pedal.age > 0 %}
-            <p>Age: {{ pedal.age }}</p>
+            {% if pedal.price > 0 %}
+            <p>Price: {{ pedal.price }}</p>
             {% else %}
-            <p>Age: Kitten</p>
+            <p>Price: Unknown</p>
             {% endif %}
         </div>
         <div class="card-action">
@@ -23,20 +23,39 @@
     </div>
     </div>
     <div class="col s6">
+        <form action="{% url 'add_show' pedal.id %}" method="post">
+            {% csrf_token %}
+            {{ playedat_form.as_p }}
+            <input type="submit" class="btn" value="Add Show">
+        </form>
     <table class="striped">
         <thead>
-        <tr><th>Date</th><th>Meal</th></tr>
+        <tr><th>Date</th><th>Location</th><th>Type of Show</th></tr>
         </thead>
         <tbody>
             {% for playedat in pedal.playedat_set.all %}
             <tr>
                 <td>{{playedat.date}}</td>
                 <td>{{playedat.location}}</td>
-                <td>{{playedat.get_meal_display}}</td>
+                <td>{{playedat.get_show_display}}</td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
     </div>
 </div>
+
+<script>
+    var dateEl = document.getElementById('id_date');
+    M.Datepicker.init(dateEl, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
+
+    // add additional JS to initialize select below
+    var selectEl = document.getElementById('id_show');
+    M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
